python_stack/flask_MySQL/MySQL_connection_errors/MySQL_connection_errors.txt
config = {
                'host': 'localhost',
                'database': db, # we got db as an argument
                'user': 'roots’, <==== changed root to ‘roots’
                'password': 'root',
                'port': '3306' # change the port to match the port your SQL server is running on
        }
sqlalchemy.exc.OperationalError: (_mysql_exceptions.OperationalError) (1045, "Access denied for user 'roots'@'localhost' (using password: YES)") (Background on this error at: http://sqlalche.me/e/e3q8)
_______________________________________________________________________________
config = {
                'host': 'localhost',
                'database' db, <=== removed colon
                'user': 'root’, 
                'password': 'root',
                'port': '3306' 
        }
Traceback (most recent call last):
  File "server.py", line 3, in <module>
    from mysqlconnection import MySQLConnector
  File "/Users/enkhbattulga/Desktop/DojoWork/python_stack/flask_MySQL/flask_mysql/mysqlconnection.py", line 9
    'database' db, # we got db as an argument
                ^
SyntaxError: invalid syntax
_______________________________________________________________________________

config = {
                'host': 'localhost',
                'database' : data, <===== changed db to ‘data’
                'user': 'root’, 
                'password': 'root',
                'port': '3306' 
        }

Traceback (most recent call last):
  File "server.py", line 6, in <module>
    mysql = MySQLConnector(app, 'mydb')
  File "/Users/enkhbattulga/Desktop/DojoWork/python_stack/flask_MySQL/flask_mysql/mysqlconnection.py", line 40, in MySQLConnector
    return MySQLConnection(app, db)
  File "/Users/enkhbattulga/Desktop/DojoWork/python_stack/flask_MySQL/flask_mysql/mysqlconnection.py", line 9, in __init__
    'database': data, # we got db as an argument
NameError: global name 'data' is not defined

_______________________________________________________________________________

config = {
                'host': 'localhost',
                'database' : db, 
                'user': 'root’, 
                'password': 'root',
                'port': '3308’  <=======changed port number 3306 to ‘3308’
        }

sqlalchemy.exc.OperationalError: (_mysql_exceptions.OperationalError) (2003, "Can't connect to MySQL server on '127.0.0.1' (61)") (Background on this error at: http://sqlalche.me/e/e3q8)
_______________________________________________________________________________

config = {
                'host': 'localhost',
                'database' : db, 
                'user': 'roots’, <=========changed user root to ‘roots’
                'password': 'root',
                'port': '3306' 
        }

sqlalchemy.exc.OperationalError: (_mysql_exceptions.OperationalError) (1045, "Access denied for user 'roots'@'localhost' (using password: YES)") (Background on this error at: http://sqlalche.me/e/e3q8)
_______________________________________________________________________________

config = {
                'host': 'localhost',
                'database' : db, 
                'user': 'root’, 
                'password': 'root, <===== removed closing single quote
                'port': '3306' 
        }
Traceback (most recent call last):
  File "server.py", line 3, in <module>
    from mysqlconnection import MySQLConnector
  File "/Users/enkhbattulga/Desktop/DojoWork/python_stack/flask_MySQL/flask_mysql/mysqlconnection.py", line 11
    'password': 'root,
                     ^
SyntaxError: EOL while scanning string literal
_______________________________________________________________________________

config = {
                'host': 'localhost',
                'database' : db, 
                'user': 'root’ <========== coma removed
                'password': 'root',
                'port': '3306' 
        }
Traceback (most recent call last):
  File "server.py", line 3, in <module>
    from mysqlconnection import MySQLConnector
  File "/Users/enkhbattulga/Desktop/DojoWork/python_stack/flask_MySQL/flask_mysql/mysqlconnection.py", line 11
    'password': 'root',
              ^
SyntaxError: invalid syntax